src/objects/Dev__c.object
<CustomObject>
    <fields>
        <fullName>CourseDescription_Dev__c</fullName>
        <label>CourseDescription</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CourseFee_Dev__c</fullName>
        <label>CourseFee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Courses__c</fullName>
        <label>Courses</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Dev 101</fullName>
                </value>
                <value>
                    <fullName>dev 102</fullName>
                </value>
                <value>
                    <fullName>Dev 103</fullName>
                </value>
                <value>
                    <fullName>Dev 104</fullName>
                </value>
                <value>
                    <fullName>Dev 105</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RegistrationNumber_Dev__c</fullName>
        <label>RegistrationNumber</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Traing_Dev__c</fullName>
        <label>Trainig</label>
        <referenceTo>Trainig__c</referenceTo>
        <relationshipLabel>Dev</relationshipLabel>
        <relationshipName>Dev</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Triners_Dev__c</fullName>
        <label>Trainers</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>joe1</fullName>
                </value>
                <value>
                    <fullName>jhon1</fullName>
                </value>
                <value>
                    <fullName>janelle1</fullName>
                </value>
                <value>
                    <fullName>ravi1</fullName>
                </value>
                <value>
                    <fullName>kumar1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Dev</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Dev Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dev</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>